--- a/1.md
+++ b/1.md
@@ -2,3 +2,5 @@
 2. Описание страницы https://ru.wikipedia.org/:
 Вверху страницы расположена шапка (кнопки: Обсуждение, Вклад, Создать учетку, Войти, а также вкладки: Читать, Просмотр кода, История, Поле ввода для поиска по Википедии). В левом верхнем углу - заголовок сайта. Ниже  по центру - блок приветствия, ссылки и кнопка для создания своей статьи. В левой части страницы - меню. Ниже в рабочем поле расположены блоки с текстом, картинками, ссылками. Внизу страницы расположен нижний заголовок. Далее нижнее горизонтальное меню. В конце страницы - нижний колонтитул.
 3. Картинки с изменениями: 1-3_before, 1-3_after.
+4. Протокол сайта yandex.ru - https ( https://dzen.ru/?yredirect=true).
+Прототип низкой детализации сайта https://dzen.ru - 4_photo.
